Remove WEBGL_compressed_texture_atc

Bug: 845288
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ica88b645f9db95fa2baa9ab1c0ba51fde8093f6c
Reviewed-on: https://chromium-review.googlesource.com/1067700
Commit-Queue: Kai Ninomiya <kainino@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560435}
Former-commit-id: 344f339a3b379b4dab61a35be40c5effbbf468fb