third_party/blink/renderer/modules/webgl/webgl_extension_name.h
@@ -28,7 +28,6 @@ enum WebGLExtensionName {
   kOESVertexArrayObjectName,
   kWebGLColorBufferFloatName,
   kWebGLCompressedTextureASTCName,
-  kWebGLCompressedTextureATCName,
   kWebGLCompressedTextureETCName,
   kWebGLCompressedTextureETC1Name,
   kWebGLCompressedTexturePVRTCName,
