third_party/blink/renderer/modules/webgl/webgl_rendering_context.h
@@ -107,7 +107,6 @@ class WebGLRenderingContext final : public WebGLRenderingContextBase {
   Member<OESVertexArrayObject> oes_vertex_array_object_;
   Member<WebGLColorBufferFloat> webgl_color_buffer_float_;
   Member<WebGLCompressedTextureASTC> webgl_compressed_texture_astc_;
-  Member<WebGLCompressedTextureATC> webgl_compressed_texture_atc_;
   Member<WebGLCompressedTextureETC> webgl_compressed_texture_etc_;
   Member<WebGLCompressedTextureETC1> webgl_compressed_texture_etc1_;
   Member<WebGLCompressedTexturePVRTC> webgl_compressed_texture_pvrtc_;
