third_party/blink/renderer/modules/webgl/webgl_rendering_context_base.h
@@ -84,7 +84,6 @@ class OESVertexArrayObject;
 class WebGLActiveInfo;
 class WebGLBuffer;
 class WebGLCompressedTextureASTC;
-class WebGLCompressedTextureATC;
 class WebGLCompressedTextureETC;
 class WebGLCompressedTextureETC1;
 class WebGLCompressedTexturePVRTC;
@@ -625,7 +624,6 @@ class MODULES_EXPORT WebGLRenderingContextBase : public CanvasRenderingContext,
   friend class OESVertexArrayObject;
   friend class WebGLDebugShaders;
   friend class WebGLCompressedTextureASTC;
-  friend class WebGLCompressedTextureATC;
   friend class WebGLCompressedTextureETC;
   friend class WebGLCompressedTextureETC1;
   friend class WebGLCompressedTexturePVRTC;
