content/test/gpu/gpu_tests/webgl2_conformance_expectations.py
@@ -21,8 +21,6 @@ class WebGL2ConformanceExpectations(WebGLConformanceExpectations):
     # failures.
     self.Skip('WebglExtension_WEBGL_compressed_texture_astc',
         ['win', 'mac', 'linux'])
-    self.Skip('WebglExtension_WEBGL_compressed_texture_atc',
-        ['win', 'mac', 'linux'])
     self.Skip('WebglExtension_WEBGL_compressed_texture_etc',
         ['win', 'mac', 'linux'])
     self.Skip('WebglExtension_WEBGL_compressed_texture_etc1',
